<resources>
    <string name="app_name">Timetable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="busFragment">bus fragment</string>
    <string name="TrolleybusFragment">Trolleybus fragment</string>
    <string name="TramFragment">Tram fragment</string>
    <string name="toTheFirstSide">To the first side</string>
    <string name="Monday">Пн</string>
    <string name="Tuesday">Вт</string>
    <string name="thaturday">Ср</string>
    <string name="Wednesday">Ср</string>
    <string name="Thursday">Чт</string>
    <string name="Friday">Пт</string>
    <string name="Saturday">Сб</string>
    <string name="Sunday">Вс</string>
</resources>